# voice2text

./: .gitignore  .releaserc.json  .vercelignore  CHANGELOG.md  DEVELOPMENT.md  README.md  VERSION.md  build_log.txt  package-lock.json  package.json  pnpm-lock.yaml  turbo.json  vercel.json
.github/: dependabot.yml
.github/workflows/: release.yml
apps/desktop/: .env.example  package.json  tsconfig.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: audio.rs  auth.rs  history.rs  keyboard_hook.rs  lib.rs  main.rs  text_injection.rs  transcribe.rs
apps/web/: .npmrc  package-lock.json  package.json  vercel.json
apps/web/scripts/: generate-test-key.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/auth/register/: route.ts
apps/web/src/app/api/transcribe/: route.ts
apps/web/src/lib/: auth.ts  license.ts  rate-limit.ts  rate-limiter.ts
docs/01-architecture/: overview.md
docs/02-implementation/: campaign-system_plan.md  setup-guide.md  voicetranscriber-vercel-konzept.md
docs/04-business/: roadmap.md
docs/_templates/: adr-template.md
