[package]
name = "appsdesktop"
version = "1.0.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "appsdesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["multipart", "json", "rustls-tls"] }
cpal = "0.17"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
enigo = { version = "0.6", features = ["serde"] }
base64 = "0.22"
winapi = { version = "0.3", features = ["utilapiset", "processthreadsapi", "securitybaseapi", "winnt", "winuser", "errhandlingapi"] }
chrono = "0.4"
machine-uid = "0.5.4"
sha2 = "0.10.9"


